fix spinner layout on iOS Safari

--- a/htdocs/assets/css/_spinner.scss
+++ b/htdocs/assets/css/_spinner.scss
@@ -22,4 +22,5 @@
 progress {
   display: block;
   margin: auto;
+  text-align: center;
 }
